--- a/user-card/src/App.css
+++ b/user-card/src/App.css
@@ -18,7 +18,7 @@
 
 .card2 {
   text-align: center;
-  background-color: #AAA;
+  background-color: #444;
   color: black;
   border: .1rem solid black;
   border-radius: 15px;
