--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,30 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto");
-@import url("https://fonts.googleapis.com/css?family=Montserrat:600|Saira+Semi+Condensed&display=swap&subset=latin-ext");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:600|Saira+Semi+Condensed&display=swap&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+html,
+body,
+#root {
+  width: 100%;
+  height: auto;
+  max-height: 1500px;
+  margin: 0 auto;
+  padding: 0;
+  background-color: #000000;
+  /* display: flex; */
+}
+
+h2,
+h3,
+h4,
+h5,
+h6,
+div,
+p,
+span {
+  color: #000000;
+  font-family: 'Roboto', sans-serif;
+}
+
 .App {
   display: flex;
   height: auto;
@@ -17,7 +41,7 @@
 
 .App h3 {
   color: #4e4c9e;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', sans-serif;
   font-size: 32pt;
 }
 
@@ -26,6 +50,14 @@
 .App h6,
 .App p {
   color: #ffffff;
+}
+
+#user-card h4,
+h5,
+h6,
+p {
+  color: #ffffff;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', sans-serif;
 }
 
 #user-card {
@@ -140,7 +172,7 @@
 
 #follower-card .card-text p {
   line-height: 2.5rem;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: bolder;
   color: white;
   font-size: 19pt;
@@ -151,7 +183,7 @@
 .content-block-1 h1 {
   text-align: center;
   font-size: 50pt;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .content-block-1 h4 {
@@ -159,6 +191,13 @@
   text-align: center;
   margin-left: 21rem;
   width: 200px;
+}
+
+.content-block-1 h5 {
+  font-size: 26pt;
+  text-align: center;
+  margin-left: 16rem;
+  width: 400px;
 }
 
 .profile {
@@ -170,7 +209,3 @@
   margin-bottom: 8rem;
   background-color: #00000060;
 }
-
-/*# sourceMappingURL=App.css.map */
-
-/*# sourceMappingURL=App.scss.map */
